# juce_nanovg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Libraries/JUCE/modules/juce_audio_plugin_client/Standalone/: juce_StandaloneFilterApp.cpp
Libraries/JUCE/modules/juce_graphics/contexts/: juce_GraphicsContext.cpp  juce_LowLevelGraphicsContext.h
Libraries/JUCE/modules/juce_gui_basics/components/: juce_Component.cpp
Libraries/nanovg/: nanovg_mtl.m
Source/: NVGGraphics.h  NanoVGComponent.cpp  NanoVGComponent.h  NanoVGGraphics.cpp  NanoVGGraphics.h  NanoVGGraphicsContext.cpp  NanoVGGraphicsContext.h  NanoVGGraphicsStructs.cpp  NanoVGGraphicsStructs.h
Source/example/: CacheTest.cpp  CacheTest.h  Main.cpp  MainComponent.cpp  MainComponent.h  NVGDemoComponent.cpp  NVGDemoComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/nanovg_compat/: nanovg_compat.c  nanovg_compat.h  nanovg_compat.m
nanovg/: nanovg.c  nanovg_mtl.h
source/: CMakeLists.txt  NanoVGGraphics.h  NanovgComponent.cpp  NanovgComponent.h
source/example/: MainComponent.cpp  MainComponent.h
